fix(progressbar): match chunks spacing with design in fluent theme

--- a/packages/fluent/scss/progressbar/_variables.scss
+++ b/packages/fluent/scss/progressbar/_variables.scss
@@ -111,4 +111,4 @@ $kendo-circular-progressbar-arc-stroke: get-theme-color-var( primary-100 ) !defa
 /// @group progressbar
 $kendo-circular-progressbar-scale-stroke: $kendo-progressbar-bg !default;
 
-$kendo-progressbar-item-border-width: calc( map-get( $kendo-spacing, thin ) + map-get( $kendo-spacing, hair ) ) !default;
+$kendo-progressbar-item-border-width: map-get( $kendo-spacing, thin ) !default;
